<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegloginHttp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="person">Your Name</string>
    <string name="birthday">Birthday (touch to edit)</string>
    <string name="address">Address</string>
    <string name="captcha">Captcha</string>
    <string name="keeplogin">Save login</string>

</resources>