<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/regPass"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@id/regEmail"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/regName"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@id/regPass"
        android:hint="@string/person"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/regBirth"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/regName"
        android:hint="@string/birthday"
        android:inputType="text"
        android:textIsSelectable="true" />

    <EditText
        android:id="@+id/regAddress"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@id/regBirth"
        android:hint="@string/address"
        android:inputType="text" />

    <EditText
        android:id="@+id/regCaptcha"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/regAddress"
        android:hint="@string/captcha"
        android:inputType="text"
        />

    <ImageView
        android:id="@+id/regcaptchaImg"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:contentDescription="@string/captcha"
        android:layout_below="@id/regAddress"
        android:layout_toRightOf="@id/regCaptcha" 
        />

    <Button
        android:id="@+id/regSubmit"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center|left"
        android:layout_below="@id/regCaptcha"
        android:text="@string/submit"
        />

</RelativeLayout>