<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@id/loginEmail"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/loginCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPass"
        android:text="@string/keeplogin" />

    <Button
        android:id="@+id/loginSubmit"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/loginCheckBox"
        android:gravity="center|left"
        android:onClick="onSubmit"
        android:text="@string/submit" />

    <Button
        android:id="@+id/loginReg"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@id/loginCheckBox"
        android:layout_toRightOf="@id/loginSubmit"
        android:gravity="center|left"
        android:maxLines="1"
        android:onClick="onRegister"
        android:text="@string/register" />

</RelativeLayout>